fixed two forms position css

--- a/app/templates/cpu_utilization.html
+++ b/app/templates/cpu_utilization.html
@@ -25,3 +25,13 @@
     </script>
 </body>
 </html>
+
+<style>
+body.frontcover {
+    /* note url always with respect to itself*/
+    background-image: url({{ url_for('static', filename='images/smiley.gif')}});
+    background-size: 47%;
+    background-repeat: repeat-y;        /*repeat-x, repeat-y*/
+    background-position: right;
+}
+</style>
