--- a/app/templates/manager_ui.html
+++ b/app/templates/manager_ui.html
@@ -44,7 +44,7 @@
     </table>
             </center>
     <br>
-    <form action="{{url_for('tune')}}" method="post" style="width:100%" input type="ratio_form">
+    <form action="{{url_for('tune')}}" method="post" style="width:100%" >
         <center>
         <fieldset style="width:65%;">
             <legend><h3>Tune the threshold and ratio:</h3></legend>
@@ -104,16 +104,6 @@ input[type=submit] {
     width: 200px
 }
 
-input[type=ratio_form] {
-    color: #fff;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-    width: 200px
-}
 
 input[type=submit]:hover{
     background: black;
