some modification to ui

--- a/app/templates/manager_ui.html
+++ b/app/templates/manager_ui.html
@@ -3,110 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <style>
+        div.title_outer{
+            align:center;
+            background-color: #64AAD0;
+            width: 100%;
+            height: 200px;
+            padding: 10px 30px 0px 30px;
+            position: relative;
+            }
+        div.title_inner{
+            left:50%;
+            margin-left:-750px;
+            background-color: #086CA2;
+            color: white;
+            font-size: 1.2em;
+            width: 1500px;
+            height: 150px;
+            line-height: 150px;
+            position: absolute;
+            bottom: 0px;
+            }
+        table.tlist{
+            border: 1px solid #034569;
+            border-collapse: separate;
+            border-spacing: 10px;
+            width:65%;
+            *border-collapse: expression('separate', cellSpacing = '10px');
+        }
+
+        input[type=number], select {
+            width: 30%;
+            padding: 12px 12px;
+            margin: 10px 20;
+
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+
+        input[type=submit] {
+            background: #64AAD0;
+            display:inline-block;
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            text-decoration: none;
+            margin: 4px 2px;
+            cursor: pointer;
+            width: 200px
+        }
+
+
+        input[type=submit]:hover{
+            background: #034569;
+            }
+
+        fieldset.field_set{
+            border-color: #034569;
+            border-style: solid;
+            width: 65%;
+            }
+        thead.tablehead {
+            color:#3C9DD0;
+            <!--width:20%;-->
+        }
+    </style>
 
 </head>
-<body style="background-color:powderblue;">
-<h1><center>Welcome to Manager UI</center></h1>
+<body style="background-color:white;">
+    <div class="title_outer">
+        <div class="title_inner"><h1 style="text-align:center;">Welcome to Manager UI</h1></div>
+    </div>
     <div style="padding:20px">
         <center>
-    <form action="{{url_for('grow_by_one')}}" method="post"  >
-        <input type="submit" value="Grow by one" class="t1" >
-    </form>
-    <form action="{{url_for('shrink_by_one')}}" method="post" >
-        <input type="submit" value="Shrink by one" class="t1">
-    </form>
+            <form action="{{url_for('grow_by_one')}}" method="post">
+                <input type="submit" value="Grow by one" class="t1" >
+            </form>
+            <form action="{{url_for('shrink_by_one')}}" method="post">
+                <input type="submit" value="Shrink by one" class="t1">
+            </form>
         </center>
     </div>
-    <br>
 
     <div style="padding:20px; width: 100%">
         <center>
-    <table class="tlist" cellspacing="10">
-        <thead>
-        <th align=left style="width:20%">ID</th>
-        <th align=left style="width:20%">Type</th>
-        <th  align=left style="width:20%">Availability Zone</th>
-        <th  align=left style="width:20%">Status</th>
-        <th  align=left style="width:20%">CPU utilization</th>
-        </thead>
-
-        {% for instance,ins_cpu in instances_cpu %}
-            <tr>
-                <td  align=left style="width:20%">{{ instance.id }}</td>
-                <td  align=left style="width:20%">{{ instance.instance_type }}</td>
-                <td  align=left style="width:20%">{{ instance.placement['AvailabilityZone'] }}</td>
-                <td  align=left style="width:20%">{{ instance.state['Name'] }}</td>
-                <td  align=left style="width:20%"><a href="{{url_for('cpu_plot', id=instance.id)}}">
-                    {{ ins_cpu }}</a></td>
-            </tr>
-        {% endfor %}
-
-    </table>
-            </center>
-    <br>
-    <form action="{{url_for('tune')}}" method="post" style="width:100%" >
-        <center>
-        <fieldset style="width:65%;">
-            <legend><h3>Tune the threshold and ratio:</h3></legend>
-            CPU utilization (average percent) threshold for growing the pool:<br>
-            <input type="number" max="100" min="0" name="thre_h" value="{{cur[0]}}">(0~100)%<br>
-            CPU utilization (average percent) threshold for shrinking the pool:<br>
-            <input type="number" max="100" min="0" name="thre_l" value="{{cur[1]}}">(0~100)%<br>
-            Ratio by which to expand the worker pool:<br>
-            <input type="number" min="1" name="ratio_grow" step="0.01" value="{{cur[2]}}"><br>
-            Ratio by which to shrink the worker pool:<br>
-            <input type="number" min="1" name="ratio_shrink" step="0.01" value="{{cur[3]}}"><br>
-            <input type="submit" value="Set">
-        </fieldset>
+            <table class="tlist" cellspacing="10">
+                <thead class="tablehead">
+                <th align="left">ID</th>
+                <th align="left">Type</th>
+                <th align="left">Availability Zone</th>
+                <th align="left">Status</th>
+                <th align="left">CPU utilization</th>
+                </thead>
+                {% for instance,ins_cpu in instances_cpu %}
+                    <tr>
+                        <td  align=left style="width:20%">{{ instance.id }}</td>
+                        <td  align=left style="width:20%">{{ instance.instance_type }}</td>
+                        <td  align=left style="width:20%">{{ instance.placement['AvailabilityZone'] }}</td>
+                        <td  align=left style="width:20%">{{ instance.state['Name'] }}</td>
+                        <td  align=left style="width:20%;"><a href="{{url_for('cpu_plot', id=instance.id)}}">
+                            {{ ins_cpu }}</a></td>
+                    </tr>
+                {% endfor %}
+            </table>
         </center>
-    </form>
-
-    <center>
-    <form action="{{url_for('delete_all')}}" method="post"
-          onsubmit="return confirm('Delete user data and images?');">
-        Delete everything including users and photos' info in database and files on S3:
-        <input type="submit" value="Delete all data">
-    </form>
-    </center>
+        <br>
+        <center>
+            <form action="{{url_for('tune')}}" method="post" style="width:100%" >
+                <fieldset class="field_set">
+                    <legend style="color:#3C9DD0"><h3>Tune the threshold and ratio:</h3></legend>
+                    CPU utilization (average percent) threshold for growing the pool:(0~100)%<br>
+                    <input type="number" max="100" min="0" name="thre_h" value="{{cur[0]}}"><br>
+                    CPU utilization (average percent) threshold for shrinking the pool:(0~100)%<br>
+                    <input type="number" max="100" min="0" name="thre_l" value="{{cur[1]}}"><br>
+                    Ratio by which to expand the worker pool:<br>
+                    <input type="number" min="1" name="ratio_grow" step="0.01" value="{{cur[2]}}"><br>
+                    Ratio by which to shrink the worker pool:<br>
+                    <input type="number" min="1" name="ratio_shrink" step="0.01" value="{{cur[3]}}"><br>
+                    <input type="submit" value="Set">
+                </fieldset>
+            </form>
+        </center>
+        <center>
+            <form action="{{url_for('delete_all')}}" method="post"
+                  onsubmit="return confirm('Delete user data and images?');">
+                Delete everything including users and photos' info in database and files on S3:
+                <input type="submit" value="Delete all data">
+            </form>
+        </center>
     </div>
-    <p id="delete_msg" style="color:blue;">{{msg if msg != None}}</p>
+    <center><p id="delete_msg" style="color:#3C9DD0;">{{msg if msg != None}}</p></center>
 
 </body>
 </html>
 
-<style>
-table.tlist{
-    border: 1px solid black
-    border-collapse: separate;
-    border-spacing: 10px;
-    *border-collapse: expression('separate', cellSpacing = '10px');
-}
-
-input[type=number], select {
-    width: 30%;
-    padding: 12px 12px;
-    margin: 10px 20;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-
-input[type=submit] {
-    color: #fff;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-    width: 200px
-}
-
-
-input[type=submit]:hover{
-    background: black;
-
-
-</style>
