--- a/app/templates/cpu_utilization.html
+++ b/app/templates/cpu_utilization.html
@@ -5,50 +5,41 @@
     <script type="text/javascript" src="{{ url_for('static', filename='flot/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='flot/jquery.flot.js') }}"></script>
     <title>{{ title }}</title>
+    <style>
+
+        input[type=submit] {
+            background: #64AAD0;
+            color: white;
+            border: none;
+            padding: 16px 32px;
+            text-decoration: none;
+            margin: 4px 2px;
+            cursor: pointer;
+            width: 200px
+        }
+
+        input[type=submit]:hover{
+            background: #034569;
+    </style>
 </head>
 <body style="background-color:powderblue;">
     <center>
-    <h1>CPU Utilization Plot</h1>
-    <div id="cpu_plot" style="width:600px;height:300px;"></div>
-    <form action="{{url_for('main')}}" method='get'>
-        <input type='submit' value='Back'/>
-    </form>
-    <script>
+        <h1>CPU Utilization Plot</h1>
+        <div id="cpu_plot" style="width:600px;height:300px;"></div>
+        <form action="{{url_for('main')}}" method='get'>
+            <input type='submit' value='Back'/>
+        </form>
+        <script>
 
-        var options = {
-            series: {
-                lines: { show: true },
-                points: { show: true }
-            }
-        };
+            var options = {
+                series: {
+                    lines: { show: true },
+                    points: { show: true }
+                }
+            };
 
-        $.plot($("#cpu_plot"), [ {{ cpu_stats }} ] , options);
-    </script>
+            $.plot($("#cpu_plot"), [ {{ cpu_stats }} ] , options);
+        </script>
     </center>
 </body>
 </html>
-
-<style>
-body.frontcover {
-    /* note url always with respect to itself*/
-    background-image: url({{ url_for('static', filename='images/smiley.gif')}});
-    background-size: 47%;
-    background-repeat: repeat-y;        /*repeat-x, repeat-y*/
-    background-position: right;
-}
-
-input[type=submit] {
-    color: #fff;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-    width: 200px
-}
-
-input[type=submit]:hover{
-    background: black;
-
-</style>
